[tool.poetry]
name = "nepalinews-api"
version = "0.1.0"
description = "An Api to get all nepali news sources."
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
